--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -20,6 +20,30 @@ body {
     background-color: #171a21;
     scroll-behavior: smooth;
     color: #ffffff;
+
+}
+
+#carregando {
+    position: fixed;
+    z-index: 22222;
+    bottom: 0;
+    font-size: 40px;
+    text-transform: uppercase;
+    background-color:rgba(0, 0, 0, 0.322);
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.fa-circle-notch{
+    animation: gira linear 2s infinite;
+}
+
+@keyframes gira{
+    0%{
+        transform: rotate(360deg);
+    }
 }
 
 /*barra que contem o logo e o menu */
@@ -193,10 +217,11 @@ body {
 /*class para manipular ul*/
 .galeria {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     overflow: hidden;
     flex-wrap: wrap;
     list-style: none;
+
 }
 
 /*frase (fotos em destaque)*/
@@ -235,9 +260,9 @@ body {
 
 }
 
-
 .galeria li {
     position: relative;
+    margin: 15px;
 }
 
 /*class para manipular a legenda da foto*/
@@ -264,9 +289,7 @@ body {
 /*class para manipular foto*/
 .foto {
     max-width: 20em;
-    height: auto;
     transition: 500ms;
-    margin-top: 0.8em;
     border-radius: 3px;
 
 }
@@ -276,7 +299,7 @@ body {
 }
 
 /*class onde terá o nome do autor da foto com o link de redirecionamento */
-.autor-foto{
+.autor-foto {
     position: absolute;
     bottom: 10px;
     left: 10px;
