--- a/css/agradecimentos.css
+++ b/css/agradecimentos.css
@@ -88,24 +88,6 @@ body {
 }
 
 .fa-heart {
-    color: red;
-    font-size: 1.40em;
-}
-
-.fa-heart {
-    animation: piscarcoracao 1s linear infinite;
-}
-
-@keyframes piscarcoracao {
-    0% {
-        opacity: 1;
-    }
-
-    50% {
-        opacity: 0.1;
-    }
-
-    100% {
-        opacity: 0;
-    }
+    color: rgba(255, 0, 0, 0.685);
+    font-size: 1.20em;
 }
